[gd_scene load_steps=2 format=3 uid="uid://b3tginov3n25d"]

[ext_resource type="Script" path="res://addons/cog_ui/classes/volume_slider/volume_slider.gd" id="1_ns7dr"]

[node name="VolumeSlider" type="HSlider"]
custom_minimum_size = Vector2(500, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -8.0
offset_right = 4.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
max_value = 1.0
step = 0.01
value = 1.0
script = ExtResource("1_ns7dr")
property = null

[connection signal="drag_ended" from="." to="." method="_on_drag_ended"]
